src/pages/ArticleIndivPages/ArticleIndivPage.css
.indivArticle-main-div {
    margin: 0 auto;
    width: 75vw;
    align-items: left;
}

.indivArticle-main-image {
    width: 75vw;
    height: auto;
}

.indivArticle-header {
    font-size: 3.5vw;
    font-weight: bold;
    text-align: left;
    width: 100%;
    padding: 5px;
    margin: 0;
}

.indivArticle-author-date-line {
    height: 1.5em;
}

.indivArticle-author-date {
    display: inline-block;
}

.indivArticle-date {
    float: right;
}

.indivArticle-article {
    margin: 25px 0;
}

@media (max-width: 580px) {
    .indivArticle-header { font-size: 6vw; }
    .indivArticle-article { font-size: 4vw; }
}

